[package]
name = "imxrt-fcb"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "i.MX RT FlexSPI configuration block (FCB) for W25Q parts."


[dependencies.imxrt-boot-gen]
version = "0.3"
path = "../.."

[lib]
path = "lib.rs"

[package.metadata.docs.rs]
features = ["imxrt-boot-gen/imxrt1060"]
default-target = "thumbv7em-none-eabihf"
